feat: implemented ordering, mapping and filtering functionality